"feat(core) Complete weather with white pine lake html and js"

--- a/lcc/white-pine-lake/index.html
+++ b/lcc/white-pine-lake/index.html
@@ -36,14 +36,17 @@
 
             </p>
       <hr>
+      <br>
       <!-- <p id="data">Data</p> -->
-      <h3>Show the Trail's Weather</h3>
+      <!-- <h3>Show the Trail's Weather</h3> -->
       <ul>
-        <li id="temp">temp</li>
-        <li>Minimum Temperature:</li>
-        <li>Maximum Temperature:</li>
-        <li>Wind Speed:</li>
-        <li>Wind Direction:</li>
+        <li id="temp"></li>
+        <li id="temp_min">/li>
+        <li id="temp_max"></li>
+        <li id="weatherType"></li>
+        <li id="windSpeed"></li>
+        <li id="windDirection"></li>
+        <li id="humidity" id="pressure"></li>
       </ul>
     </div>
 
