feat(core) Create 'Canyons' folder; Move lcc to 'Canyons'
To keep track of the various hikes, each area needs its own folder
Sync'd js and css files to white-pine-lake
Created Red Pine Lake folder and all files
Moved css folder outside to utilize throughout all html files

--- a/the-canyons/lcc/red-pine-lake/index.html
+++ b/the-canyons/lcc/red-pine-lake/index.html
@@ -12,8 +12,8 @@
        }
     </style>
     <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js"></script>
-    <link rel="stylesheet" href="/Users/kevinjblack/pro/wk10-final-project/the-canyons/css/master.css">
-   <link rel="stylesheet" href="/Users/kevinjblack/pro/wk10-final-project/the-canyons/css/anchor.css">
+   <link rel="stylesheet" href="../../css/master.css">
+   <link rel="stylesheet" href="../../css/anchor.css">
  </head>
 
   <body>
@@ -71,10 +71,10 @@
     <!-- <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtosU00NJFegvblUISrzuAwABYfRFkduI&callback=initMap">
     </script> -->
-      <script src="../js/leaflet.js"></script>
+      <script src="./js/leaflet.js"></script>
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
-      <script src="../js/weather.js"></script>
+      <script src="./js/weather.js"></script>
     <!-- <script src="main.js"></script> -->
   </body>
 </html>
