feat(core) Correct link from homepage to siler lake trail

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -59,7 +59,7 @@
             <li>2</li>
             <li>3</li>
             <li>4</li>
-            <li><a href="file:///Users/kevinjblack/pro/wk10-final-project/lcc/white-pine-lake/index.html" target="_blank" alt="White Pine Trail">White Pine Trail</a></li>
+            <li><a href="/Users/kevinjblack/pro/wk10-final-project/the-canyons/lcc/white-pine-lake/index.html" target="_blank" alt="White Pine Trail">White Pine Trail</a></li>
           </ul>
         </div>
 
