WIP: Complete Little CC; Begin Big CC
Completed the maps for Little Cottonwood Canyon
Created folders and files for Brighton:
[] Silver Lake Trail
[] Solitude Lake Trail
[] Twin Lakes Trail

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -5,13 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>KevinUtah-TIY</title>
    <link rel="stylesheet" href="css/master.css">
+   <link rel="stylesheet" href="../homepage/css/anchor.css">
   </head>
   <body>
 
     <header>
+      <img id="snowshoe" src="../images/free-snowshoeing-image.png" alt="Snowshoeing image, free vector graphic">
       <h1>Kevin J Black</h1>
-      <h2>Final Project</h2>
+      <h2>Winter Trails of the Wasatch</h2>
       <h3>HTML, CSS, JavaScript</h3>
+      <div class="navbar">
+        <ul class = "navigation">
+          <li class = "button"><a href="index.html" alt="Link for home page">Home</a></li>
+          <li class = "button">Millcreek Canyon</li>
+          <li class = "button">Big Cottonwood Canyon</li>
+          <li class = "button">Little Cottonwood Canyon</li>
+        </ul>
+
+      </div>
     </header>
 
     <main>
@@ -42,7 +53,7 @@
             <li>Trails around the Yurt:  Big Water Trail, Little Water Trail, Old Red Pine Road Trail</li>
           </ul>
         </div>
-
+        <br>
         <div id="bcc">
           <h3>Big Cottonwood Canyon</h3>
           <ul>
@@ -51,23 +62,34 @@
             <li>Brighton: Silver Lake</li>
           </ul>
         </div>
-
+        <br>
         <div id="lcc">
           <h3>Little Cottonwood Canyon</h3>
           <ul>
             <li>1</li>
             <li>2</li>
-            <li>3</li>
-            <li>4</li>
-            <li><a href="/Users/kevinjblack/pro/wk10-final-project/the-canyons/lcc/white-pine-lake/index.html" target="_blank" alt="White Pine Trail">White Pine Trail</a></li>
+            <li><a href="../the-canyons/lcc/maybird-lake/index.html" target="_blank" alt="Maybird Lake Trail">Maybird Lake Trail</a></li>
+            <li><a href="../the-canyons/lcc/red-pine-lake/index.html" target="_blank" alt="Red Pine Lake Trail">Red Pine Trail</a></li>
+            <li><a href="/Users/kevinjblack/pro/wk10-final-project/the-canyons/lcc/white-pine-lake/index.html" target="_blank" alt="White Pine Trail">White Pine Lake Trail</a></li>
           </ul>
         </div>
 
       </div>
     </main>
 
-    <footer>
-    </footer>
+    <div id="footer">
+      <footer>
+        <div>
+          <ul class="footer">
+            <li>Kevin J Black</li>
+            <li>Kevin J Black</li>
+            <li>Kevin J Black</li>
+            <li>Kevin J Black</li>
+            <li>Kevin J Black</li>
+          </ul>
+        </div>
+      </footer>
+    </div>
 
     <script src="main.js"></script>
   </body>
