--- a/the-canyons/bcc/silver-lake/index.html
+++ b/the-canyons/bcc/silver-lake/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>White Pine Lake</title>
+    <title>Silver Lake</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
     <style>
        #map {
@@ -59,7 +59,7 @@
 
     <div id="main">
       <body>
-        <h2>White Pine Lake</h2>
+        <h2>Albion Basin Road to Catherine Pass / Sunset Peak Trail</h2>
         <!-- <h3>The map should be below here ... <hr></h3> -->
         <!-- <br> -->
         <div id="mapid"></div>
