--- a/the-canyons/bcc/solitude-lake/index.html
+++ b/the-canyons/bcc/solitude-lake/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>White Pine Lake</title>
+    <title>Silver Lake</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
     <style>
        #map {
@@ -19,7 +19,7 @@
   <body>
     <header>
       <h1>Winter Trails of the Wasatch</h1>
-      <h2>Little Cottonwood Canyon</h2>
+      <h2>Big Cottonwood Canyon</h2>
       <!-- <h3>Trails Around Brighton Lodge</h3> -->
       <ul>
         <!-- <li>White Pine Lake</li> -->
@@ -59,7 +59,7 @@
 
     <div id="main">
       <body>
-        <h2>White Pine Lake</h2>
+        <h2>Silver Lake Trail to Twin Lakes Trail</h2>
         <!-- <h3>The map should be below here ... <hr></h3> -->
         <!-- <br> -->
         <div id="mapid"></div>
