--- a/the-canyons/lcc/maybird-lake/index.html
+++ b/the-canyons/lcc/maybird-lake/index.html
@@ -32,7 +32,7 @@
       </div>
             <p><strong>
               Know Before You Go:  </strong><br />Check the <a href="https://utahavalanchecenter.org/advisory/salt-lake" target="_blank">avalanche warning site.
-              <img src="/Users/kevinjblack/Desktop/final-project/images/utah-avalanche-logo.png" alt="Avalanche Warning logo">
+              <img src="../../../images/utah-avalanche-logo.png" alt="Avalanche Warning logo" alt="Avalanche Warning logo">
             </a>
             <div class="box">
               <iframe src="https://utahavalanchecenter.org/advisory/salt-lake" width="20%" height="50px">
