--- a/the-canyons/lcc/cecret-lake/index.html
+++ b/the-canyons/lcc/cecret-lake/index.html
@@ -59,7 +59,7 @@
 
     <div id="main">
       <body>
-        <h2>White Pine Lake</h2>
+        <h2>Albion Basin Road to Cecret Lake</h2>
         <!-- <h3>The map should be below here ... <hr></h3> -->
         <!-- <br> -->
         <div id="mapid"></div>
